fix flex wrap
deleted unnecessary css

--- a/styles/resources.scss
+++ b/styles/resources.scss
@@ -18,14 +18,7 @@
   mix-blend-mode: multiply;
 }
 
-#bot {
-  width: 200px;
-}
-#pumpkin {
-	width: 200px;
-	height: auto;
-}
-#thinkingbot {
+.bot {
 	width: 200px;
 	height: auto;
 }
@@ -35,7 +28,6 @@
   display: flex;
   flex-direction: column; //mobile-first layout
   padding: 0 -5px;
-  flex-wrap: wrap;
   align-content: stretch;
   align-items: stretch;
   //justify-content: space-around;
@@ -43,37 +35,22 @@
 }
 
 .resources-column{
-  min-width: 300px;
+  min-width: 200px;
   flex: 1 1 300px;
-
-
   margin: 5px;
   border: 3px;
   border-color: $main;
   border-style: solid;
-  border: radius 10px;
-  padding-top: 3%;
-  padding-bottom: 3%;
-  padding-right: 6%;
-  padding-left: 6%;
-  
-  
+  padding: 20px;
 }
 
 @media (min-width: 768px) {
     .resources-container{
         flex-direction: row;
     }
-
-    .resources-column {
-        flex-basis: 500px;
-    }
 }
 
 
-.flexcontain {
-  display: flex;
-}
 .buttons {
   background-color: $main;
   color: #F3F3F3;
